Don't update progress when Frame::isLoading() is false

This can lead to spurious progress change notifications, which can lead to underestimatation of progress, even at the time when the only page is complete.

This was regressed in https://codereview.chromium.org/1860743002

BUG=650781

Review-Url: https://codereview.chromium.org/2412803004
Cr-Commit-Position: refs/heads/master@{#425178}

Former-commit-id: aa70a46d3bfff89100ab5732812dbb7a8dac7953